--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.20.0",
     "moment": "^2.19.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -11,6 +12,7 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
+    "redux-form-material-ui": "^4.3.1",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
